[tool.poetry]
name = "cicd-ml-pipeline-replicate"
version = "0.0.1"
description = "CICD pipeline replicate"
authors = ["Miguel Arquez Abdala"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^1.3.4"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
